fixed width isue on small screens

--- a/styles.css
+++ b/styles.css
@@ -12,10 +12,11 @@
 }
 
 body {
+    width: 100%;
+
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
     background-color: #FCF8FE;
 }
 
@@ -71,7 +72,8 @@ h2 {
 
 
 header {
-    min-width: 100%;
+    width: 100%;
+    box-sizing: border-box;
     height: 908px;
     padding: 70px 140px 210px;
 
@@ -923,5 +925,21 @@ footer input[type="submit"] {
 .footer-copyrights span {
     font-size: 12px;
     color: rgba(255, 255, 255, 0.5);
+}
+
+@media screen and (min-width: 768px) and (max-width: 1340px) {
+    .header-name {
+        font-size: 144px;
+        line-height: 0px;    
+        letter-spacing: 0.26em;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .header-name {
+        font-size: 67px;
+        line-height: 0px;    
+        letter-spacing: 0.26em;
+    }
 }
 
